[레거시 코드 리팩터링 - 3단계] 베로(김은솔) 미션 제출합니다. (#690)
* refactor: 메뉴가 변경되더라도 주문 항목이 변경되지 않도록 스키마 변경

* refactor: MenuPrice 이름을 Price 로 변경

* refactor: MenuGroup-Menu 의존성을 Menu->MenuGroup 단방향 간접 참조로 변경

* refactor: OrderTable-Order 의존성을 OrderTable<->Order 양방향 간접 참조로 변경

* refactor: MenuProduct 에서 Menu 의존성 제거

* refactor: OrderLineItem 에서 Order 의존성 제거

* refactor: TableGroup 에서 OrderTable 의존성 제거

* refactor: 도메인의 아이디를 매개변수로 받도록 변경

* refactor: 사용하지 않는 Repository 제거

* refactor: 패키지 분리

* refactor: addOrder 메서드 삭제

* refactor: 접근제한자 protected 로 변경

* refactor: OrderLineItem 의 Menu 직접 참조를 간접 참조로 변경

* refactor: OrderTable, Order, TableGroup 의 의존성 제거